@@ -333,7 +333,7 @@ std::string pqxx::connection::get_var(std::string_view var, sl loc)
   // (Variables can't be null, so far as I can make out.)
   return exec(std::format("SHOW {}", quote_name(var)), loc)
     .one_field_ref(loc)
-    .as<std::string>(conversion_context{get_encoding_group(loc), loc});
+    .as<std::string>(loc);
 }
 
 
